--- a/src/assets/css/_add_currency.scss
+++ b/src/assets/css/_add_currency.scss
@@ -26,6 +26,10 @@
   }
   .added {
     background-color: #eceff4;
+    box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+  }
+  .not_added {
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
   }
   .currency-name {
     text-align: center;
@@ -37,6 +41,12 @@
     }
     span:last-child {
       opacity: 0.4;
+    }
+  }
+  .it_cycle_item {
+    svg {
+      position: relative;
+      top: 1px;
     }
   }
 }
