--- a/src/assets/css/_wallet.scss
+++ b/src/assets/css/_wallet.scss
@@ -1,6 +1,6 @@
 .it_wallet {
   .wallet-icon-gr {
-    margin-top: 12px;
+    margin-top: 22px;
     margin-left: 41px;
     .wallet-icon {
       div {
@@ -77,6 +77,11 @@
         padding-left: 2px;
         box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.18);
         border: 1px solid rgba(0, 0, 0, .2);
+        position: relative;
+        svg {
+          position: relative;
+          top: -1px;
+        }
       }
     }
     .card:first-child {
@@ -104,6 +109,14 @@
         font-size: 32px;
         line-height: 70px;
         border: 1px solid rgba(0, 0, 0, .2);
+        position: relative;
+        svg {
+          position: relative;
+          top: 5px;
+        }
+        svg.oval-big-svg {
+          top: 12px;
+        }
       }
     }
   }
