--- a/src/assets/css/boostrap/_modal.scss
+++ b/src/assets/css/boostrap/_modal.scss
@@ -37,6 +37,7 @@
   position: relative;
   width: auto;
   margin: $modal-dialog-margin;
+  margin-top: 12% !important;
   // allow clicks to pass through for custom click handling to close modal
   pointer-events: none;
 
@@ -61,16 +62,20 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  box-shadow: 0 2px 34px 0 rgba(0, 0, 0, 0.28), 0 2px 4px 0 rgba(0, 0, 0, 0.05);
   width: 100%; // Ensure `.modal-content` extends the full width of the parent `.modal-dialog`
   // counteract the pointer-events: none; in the .modal-dialog
   pointer-events: auto;
   background-color: $modal-content-bg;
   background-clip: padding-box;
-  border: $modal-content-border-width solid $modal-content-border-color;
+  //border: $modal-content-border-width solid $modal-content-border-color;
   @include border-radius($border-radius-lg);
   @include box-shadow($modal-content-box-shadow-xs);
   // Remove focus outline from opened modal
   outline: 0;
+  padding: 4.5em;
+  padding-top: 2.8em;
+  padding-bottom: 2.8em;
 }
 
 // Modal background
@@ -85,7 +90,7 @@
 
   // Fade for backdrop
   &.fade { opacity: 0; }
-  &.show { opacity: $modal-backdrop-opacity; }
+  &.show { opacity: 0.05; }
 }
 
 // Modal header
@@ -147,7 +152,7 @@
 @include media-breakpoint-up(sm) {
   // Automatically set modal's width for larger viewports
   .modal-dialog {
-    max-width: $modal-md;
+    max-width: 960px;
     margin: $modal-dialog-margin-y-sm-up auto;
   }
 
