--- a/src/assets/css/itrade.scss
+++ b/src/assets/css/itrade.scss
@@ -14,6 +14,7 @@
 @import "markets_list";
 @import "account";
 @import "night";
+@import "order_close_modal";
 
 
 @font-face {
@@ -421,6 +422,7 @@ body {
   color: #1b1f2b;
   background-color: #eaebef;
   overflow-x: hidden;
+  transition: filter 400ms;
 }
 .it-page {
   top: 46px;
