--- a/src/assets/css/_wallet.scss
+++ b/src/assets/css/_wallet.scss
@@ -81,6 +81,7 @@
         svg {
           position: relative;
           top: -1px;
+          left: -1px;
         }
       }
     }
@@ -115,7 +116,7 @@
           top: 5px;
         }
         svg.oval-big-svg {
-          top: 12px;
+          top: 10px;
         }
       }
     }
