--- a/src/assets/css/_top_panel.scss
+++ b/src/assets/css/_top_panel.scss
@@ -1,7 +1,7 @@
 .it-top-panel {
   height: auto;
   width: calc(100% - 96px);
-  min-width: 1030px;
+  min-width: calc(1030px - 96px);
   background-color: #f5f7fa;
   margin-left: 94px;
   position: absolute;
@@ -54,7 +54,7 @@
     background-color: #ffffff;
     opacity: 1;
     z-index: 10;
-    height: 46px;
+    height: 45px;
     border: 1px solid rgba(0, 0, 0, .2);
     border-bottom: 0;
     position: relative;
@@ -137,7 +137,15 @@
       }
     }
   }
-  .left-icon:hover {
-    opacity: 0.7;
+  .left-icon {
+    margin-right: 5px;
+    margin-left: 5px;
+    &:hover {
+      opacity: 0.7;
+    }
+    @media (max-width: 1100px) {
+      margin-right: 0;
+      margin-left: 0;
+    }
   }
 }
