--- a/src/assets/css/_left_panel.scss
+++ b/src/assets/css/_left_panel.scss
@@ -12,7 +12,7 @@
   height: 100%;
   position: fixed;
   z-index: 5;
-  top: 46px;
+  top: 45px;
   padding-top: 1px;
   .icon {
     font-size: 22px;
@@ -50,6 +50,7 @@
     margin-top: 1px;
     margin-bottom: 8px;
     cursor: pointer;
+    transition: background-color 200ms;
     p {
       margin-bottom: 0;
     }
