--- a/src/assets/css/_my_orders.scss
+++ b/src/assets/css/_my_orders.scss
@@ -1,13 +1,17 @@
 .my_orders {
   position: fixed;
   left: 94px;
-  top: 48px;
+  top: 47px;
   width: 290px;
   background-color: white;
   height: calc(100% - 46px);
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, .2);
   border-top-right-radius: 5px;
   transition: left 300ms, width 300ms;
+  z-index: 2;
+  > div:first-child {
+    transition: opacity 200ms;
+  }
   .it-btn-group {
     margin-top: 0.6em;
   }
