make dropUP menu for timezone selector

--- a/src/assets/css/_left_panel.scss
+++ b/src/assets/css/_left_panel.scss
@@ -71,4 +71,11 @@
   .item.active:hover {
     opacity: 1;
   }
+  .it-timezone {
+    opacity: 0;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    z-index: 2;
+  }
 }
