--- a/src/assets/css/itrade.scss
+++ b/src/assets/css/itrade.scss
@@ -15,6 +15,7 @@
 @import "account";
 @import "night";
 @import "order_close_modal";
+@import "notification";
 
 
 @font-face {
@@ -179,9 +180,6 @@ body {
 }
 .it-fs13 {
   font-size: 13px;
-}
-.it-fs11 {
-  font-size: 12px;
 }
 .it-fs8 {
   font-size: 8px;
