--- a/src/assets/css/_top_panel.scss
+++ b/src/assets/css/_top_panel.scss
@@ -1,7 +1,7 @@
 .it-top-panel {
   height: auto;
   width: calc(100% - 96px);
-  min-width: calc(1030px - 96px);
+  min-width: 936px;
   background-color: #f5f7fa;
   margin-left: 94px;
   position: absolute;
