--- a/src/assets/css/_markets_list.scss
+++ b/src/assets/css/_markets_list.scss
@@ -62,6 +62,11 @@
     tr {
       th {
         padding-top: 40px;
+        position: relative;
+        .fa {
+          position: relative;
+          top: -2px;
+        }
       }
     }
   }
