--- a/src/assets/css/_analytics.scss
+++ b/src/assets/css/_analytics.scss
@@ -33,6 +33,7 @@
         font-size: 12px;
         color: #282e3d;
         text-transform: uppercase;
+        letter-spacing: 1.3px;
       }
       .info-block {
         margin-top: 10px;
@@ -110,7 +111,7 @@
     }
   }
   .chart {
-    margin-top: 18px;
+    margin-top: 14px;
     .oval {
       width: 10px;
       height: 10px;
@@ -155,7 +156,7 @@
     .detail {
       border-bottom: dashed 1px #4865d5;
       position: relative;
-      top: 20px;
+      top: 25px;
     }
     .sym {
       font-size: 16px;
@@ -196,6 +197,13 @@
   }
   .block-2 {
     margin-left: 15%;
+    .badge {
+      position: relative;
+      span {
+        position: relative;
+        top: 2px;
+      }
+    }
   }
   @media (max-width: 1300px) {
     .block-1 {
