--- a/src/assets/css/_left_panel.scss
+++ b/src/assets/css/_left_panel.scss
@@ -31,18 +31,6 @@
     bottom: 55px;
     width: 100%;
   }
-  .active {
-    background-color: white;
-    box-shadow: -9px -1px 8px 2px rgba(0, 0, 0, 0.2);
-    z-index: 0;
-    width: calc(100% + 5px);
-    padding-right: 5px;
-    div {
-      .it-badge {
-        right: 23px;
-      }
-    }
-  }
   .item {
     text-align: center;
     padding-top: 16px;
@@ -58,11 +46,31 @@
     .it-badge {
       position: absolute;
       top: 8px;
-      right: 22px;
+      left: 55px;
       font-size: 11px;
-      width: 16px;
-      height: 16px;
+      min-width: 16px;
+      min-height: 16px;
       border-radius: 50px;
+      padding-right: 5px;
+      padding-left: 5px;
+      transition: left 300ms, margin-top 300ms;
+      > span {
+        position: relative;
+        top: 1px;
+      }
+    }
+    &.active {
+      background-color: white;
+      box-shadow: -9px -1px 8px 2px rgba(0, 0, 0, 0.2);
+      z-index: 0;
+      width: calc(100% + 5px);
+      padding-right: 5px;
+      .it-badge {
+        left: 60px;
+      }
+      p {
+        margin-top: 5px;
+      }
     }
   }
   .item:hover {
