--- a/src/assets/css/_my_orders_full.scss
+++ b/src/assets/css/_my_orders_full.scss
@@ -11,6 +11,15 @@
   padding-left: 2em;
   padding-right: 2em;
   z-index: 2;
+  input[type=checkbox]:after {
+    content: " ";
+    background-color: #9FFF9D;
+    display: inline-block;
+    visibility: visible;
+  }
+  .body {
+    margin-top: 1.75em;
+  }
   .arrow {
     div {
       position: relative;
@@ -37,8 +46,8 @@
     tbody {
       tr {
         td {
-          padding-top: 0.5em;
-          padding-bottom: 0.5em;
+          padding-top: 18px;
+          padding-bottom: 16px;
         }
       }
     }
@@ -49,7 +58,7 @@
         position: relative;
         svg {
           position: relative;
-          top: -5px;
+          top: -4px;
         }
       }
     }
@@ -70,12 +79,12 @@
     height: 23px;
   }
   .export_btn_small, .export_btn_big {
+    background-color: #f5f7fa !important;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
-    padding-left: 21px;
-    padding-right: 21px;
-    > span {
-      opacity: 0.7;
-    }
+    border: solid 1px rgba(0, 0, 0, 0.1);
+    padding: 0.3rem 0.75rem;
+    padding-left: 18px;
+    padding-right: 18px;
   }
   .export_btn_small {
     display: none;
